[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 50
script = ExtResource("1")

[node name="Overlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dim" type="ColorRect" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -110.0
offset_right = 160.0
offset_bottom = 110.0

[node name="VBox" type="VBoxContainer" parent="Overlay/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 14.0
offset_right = -16.0
offset_bottom = -14.0
alignment = 1
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Overlay/Panel/VBox"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)

[node name="ContinueButton" type="Button" parent="Overlay/Panel/VBox"]
layout_mode = 2
text = "Continue"
theme_override_font_sizes/font_size = 12

[node name="MainMenuButton" type="Button" parent="Overlay/Panel/VBox"]
layout_mode = 2
text = "Main Menu"
theme_override_font_sizes/font_size = 12

[node name="QuitButton" type="Button" parent="Overlay/Panel/VBox"]
layout_mode = 2
text = "Exit"
theme_override_font_sizes/font_size = 12
